snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/maven-metadata.xml.md5
1dbda9a5d8f5567cc17b1c5fe422d2eb